[package]
name = "markline"
edition = "2021"
version = "1.1.3"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "markline: markbox line picker for stdin line input"
readme = "README.md"
repository = "https://github.com/sixarm/markline-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["check", "markbox", "stdin", "pick", "choose"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
cursive = { version = "0.20.0" } # features = ["crossterm-backend", "termion-backend"]
clap = { version = "4.5.4", features = ["deprecated", "derive", "cargo", "env", "unicode", "wrap_help", "string"] }
env_logger = "0.9.3"
log = "0.4.21"
